# hyejin-bot

./: .env.example  .gitignore  CLAUDE.md  CONTRACTS.md  README.md  config.example.toml  justfile  pyproject.toml
.claude/skills/daeyeon-bot-code-review/: SKILL.md
.claude/skills/daeyeon-bot-code-review/references/: output-format.md
.claude/skills/daeyeon-bot-jira-triage/: SKILL.md
.claude/skills/hyejin-bot-code-review/: SKILL.md
.claude/skills/hyejin-bot-code-review/references/: anti-patterns.md  output-format.md
.claude/skills/hyejin-bot-jira-triage/: SKILL.md
.claude/skills/upstream-code-review-reference/: SKILL.md
.claude/skills/upstream-code-review-reference/references/: anti-patterns.md  output-format.md
deploy/launchd/: ai.rebellions.hyejin-bot.plist  entrypoint.sh
deploy/systemd/: daeyeon-bot.service  hyejin-bot.service
docs/: DEPLOY.md  OPTIMIZATION_PLAN.md  PLAN.md  RUNBOOK.md
scripts/: bootstrap-vault-approle.sh  install-linux.sh  install-mac.sh  setup-token.sh
specs/001-github-pr-review-bot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-github-pr-review-bot/checklists/: requirements.md
specs/001-github-pr-review-bot/contracts/: claude-review-output.md  github-api-surface.md  persona-skill-format.md
specs/002-jira-triage-bot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-jira-triage-bot/checklists/: requirements.md
specs/002-jira-triage-bot/contracts/: claude-triage-output.md  jira-rest-api-surface.md  persona-skill-format.md  ssh-log-dump-surface.md
src/daeyeon_bot/: __init__.py  __main__.py
src/daeyeon_bot/app/: __init__.py  config.py  container.py  dispatcher.py  doctor.py  heartbeat.py  lifecycle.py  lock.py  pause.py  prune.py  ratelimit.py  registry.py  replay.py  supervisor.py
src/daeyeon_bot/cli/: dev.py  inspect.py  lifecycle.py  main.py  ops.py
src/daeyeon_bot/core/: errors.py  events.py  protocols.py
src/daeyeon_bot/core/jira_triage/: types.py
src/daeyeon_bot/core/pr_review/: __init__.py  persona.py  types.py
src/daeyeon_bot/handlers/: echo.py  jira_triage.py  jira_triage_parsing.py  jira_triage_schemas.py  pr_review.py  pr_review_diff.py  pr_review_prompt.py  pr_review_render.py  pr_review_schemas.py
src/daeyeon_bot/infra/: __init__.py  claude.py  gh_cli.py  host_resolver.py  jira_client.py  jira_markup.py  logging.py  loki.py  outbox.py  pr_review_audit.py  pr_review_persona.py  pr_review_state.py  queries.py  schemas.py  secrets.py  storage.py
src/daeyeon_bot/infra/db/migrations/: 001_init.sql  002_gh_review_requested_state.sql
src/daeyeon_bot/triggers/: gh_review_requested.py  jira_assigned.py  manual.py
src/hyejin_bot/: __init__.py  __main__.py
src/hyejin_bot/app/: backup.py  config.py  container.py  dispatcher.py  doctor.py  heartbeat.py  lifecycle.py  lock.py  pause.py  prune.py  ratelimit.py  registry.py  replay.py  supervisor.py
src/hyejin_bot/cli/: __init__.py  _dev_payloads.py  dev.py  inspect.py  lifecycle.py  main.py  ops.py
src/hyejin_bot/core/: __init__.py  errors.py  events.py  manifest.py  persona.py  protocols.py  results.py  time.py
src/hyejin_bot/core/jira_triage/: __init__.py  audit.py
src/hyejin_bot/core/news/: __init__.py  types.py
src/hyejin_bot/core/pr_review/: __init__.py  audit.py  persona.py
src/hyejin_bot/handlers/: __init__.py  echo.py  jira_triage.py  jira_triage_parsing.py  news.py  news_prompt.py  news_render.py  news_schemas.py  pr_review.py  pr_review_lgtm.py  pr_review_prompt.py  pr_review_render.py  pr_review_schemas.py
src/hyejin_bot/infra/: claude.py  cron_state.py  gh_cli.py  jira_client.py  jira_markup.py  jira_triage_audit.py  jira_triage_state.py  logging.py  loki.py  news_sources.py  outbox.py  persona_loader.py  pr_review_audit.py  pr_review_persona.py  queries.py  secrets.py  slack.py  source_grep.py  ssh_logs.py  ssw_bundle.py  storage.py
src/hyejin_bot/infra/db/: __init__.py
src/hyejin_bot/infra/db/migrations/: 003_ratelimit_seed.sql  004_pr_review_audit_disallowed_repo.sql  005_jira_triage_state.sql  006_pr_review_audit_skipped_draft.sql  007_cron_state.sql
src/hyejin_bot/triggers/: __init__.py  cron.py  gh_review_requested.py  jira_assigned.py  manual.py
tests/: conftest.py
tests/fakes/: __init__.py  gh_cli.py  jira_client.py  loki.py  pr_persona.py  ssh_logs.py
tests/integration/: test_gh_review_requested_e2e.py  test_jira_triage_e2e.py  test_jira_triage_pause.py  test_jira_triage_persona_reload.py  test_pause_resume.py  test_phase1_e2e.py  test_pr_review_e2e.py  test_pr_review_pause.py  test_ratelimit_dispatcher.py  test_replay.py  test_two_phase_shutdown.py
tests/unit/: test_backup.py  test_claude.py  test_claude_real.py  test_cli.py  test_cli_dev_payloads.py  test_cli_inspect.py  test_cli_lifecycle.py  test_cli_ops.py  test_cli_pr_review.py  test_cli_setup_secret.py  test_config.py  test_container_news_cron.py  test_cron_trigger.py  test_dispatcher.py  test_doctor.py  test_gh_cli.py  test_gh_cli_filters.py  test_gh_review_requested_trigger.py  test_heartbeat.py  test_host_resolver.py  test_inspect_pr_review.py  test_jira_assigned_trigger.py  test_jira_client.py  test_jira_markup.py  test_jira_triage_audit.py  test_jira_triage_handler.py  test_jira_triage_parsing.py  test_jira_triage_state.py  test_lock.py  test_logging_redaction.py  test_loki.py  test_migration_002.py  test_migration_005.py  test_news_handler.py  test_news_render.py  test_news_sources.py  test_outbox.py  test_pause.py  test_persona_bundled.py  test_pr_review_audit.py  (+25 more)
