[project]
name = "daeyeon-bot"
version = "0.0.1"
description = "Personal Claude bot daemon — daeyeon's at-home assistant."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [
    { name = "daeyeon.lee", email = "daeyeon.lee@rebellions.ai" },
]
keywords = ["claude", "agent", "daemon", "bot"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Private :: Do Not Upload",
]
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "structlog>=24.4",
    "aiosqlite>=0.20",
    "typer>=0.12",
    "keyring>=25.0",
    "uuid-utils>=0.9",
]

[project.scripts]
daeyeon-bot = "daeyeon_bot.cli.main:app"

[project.urls]
Homepage = "https://github.com/rebellions-sw/daeyeon-bot"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daeyeon_bot"]

[tool.hatch.build.targets.sdist]
include = ["src/daeyeon_bot", "README.md", "CONTRACTS.md", "docs/PLAN.md"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-trio>=0.8",
    "anyio>=4.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # bandit
    "RUF",  # ruff-specific
    "ASYNC",
    "TID",  # tidy-imports (banned-imports)
    "PTH",  # use pathlib
    "PL",   # pylint subset
]
ignore = [
    "E501",   # line length: ruff format handles
    "S101",   # assert allowed in tests
    "PLR0913",
    "PLR2004",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S", "PL"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.lint.isort]
known-first-party = ["daeyeon_bot"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnknownParameterType = "warning"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=daeyeon_bot",
    "--cov-report=term-missing:skip-covered",
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: end-to-end scenarios using real container wiring",
    "slow: takes longer than 1s",
]

[tool.coverage.run]
branch = true
source = ["daeyeon_bot"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
